Blurry fix

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -35,6 +35,7 @@ body {
   margin: 0;
   color: #f5f5f5;
   font-weight: 500;
+  font-size: 2rem;
 }
 
 #logo-img {
@@ -122,4 +123,10 @@ body {
 
 .mapboxgl-canvas {
   outline: none;
+}
+
+.modal.center .modal-dialog {
+  -webkit-transform: translate3d(0,0,0); 
+  transform: translate3d(0,0,0);
+  position: absolute;
 }
